# src/openapi.json
@@ -60,10 +60,48 @@
         }
       }
     },
-    "/tasks": {
+    "/stats": {
       "get": {
-        "summary": "Get All Tasks",
+        "summary": "Get task Stats",
+        "description": "Returns stats about tasks",
+        "responses": {
+          "200": {
+            "description": "Task statistics",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "total": { "type": "integer", "example": 10 },
+                    "done": { "type": "integer", "example": 5 },
+                    "open": { "type": "integer", "example": 5 }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/tasks": {
+
+      "get": {
+        "summary": "Get All Tasks or Filter by Done Status",
         "description": "Retrieves list of all tasks",
+        "parameters": [
+          {
+            "name": "title",
+            "in": "query",
+            "description": "Filter tasks by done title",
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "done",
+            "in": "query",
+            "description": "Filter tasks by done status",
+            "schema": { "type": "boolean" }
+          }
+        ],
         "responses": {
           "200": {
             "description": "List of tasks",
